--- a/front/src/routes/LoginPage/loginPage.module.css
+++ b/front/src/routes/LoginPage/loginPage.module.css
@@ -2,9 +2,10 @@
     max-width: 300px;
 }
 
-.form * {
-    width: 100%;
-    margin-top: 20px;;
+.form *[class=form-control] {
+    display: inline-block;
+    width: 90%;
+    margin-top: 20px;
 }
 
 .formHeader {
@@ -12,5 +13,6 @@
 }
 
 .submit {
-    width: 100%;
+    width: 90%;
+    margin-top: 20px;
 }
