-added suggest to login if not authenticated

--- a/front/src/routes/CreateProject/createProject.module.css
+++ b/front/src/routes/CreateProject/createProject.module.css
@@ -1,4 +1,10 @@
 .field {
-    width: 80%;
+    width: calc(100% - 30px);
     margin-right: 10px;
+}
+
+@media (max-width: 768px) {
+    .field {
+        
+    }
 }
